--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,7 +120,7 @@ foreach(my_file ${HTMLS})
 endforeach()
 file(APPEND ${HTML_QRC} "    </qresource>\n</RCC>")
 
-file(GLOB_RECURSE HTMLLICENSES ${HTMLDIR}/licenses/*.txt)
+file(GLOB_RECURSE HTMLLICENSES ${HTMLDIR}/licenses/*)
 set(LICENSES_QRC ${HTMLDIR}/licenses.qrc)
 file(WRITE ${LICENSES_QRC} "<RCC>\n    <qresource prefix=\"/licenses/\">\n")
 foreach(my_file ${HTMLLICENSES})
@@ -129,6 +129,14 @@ foreach(my_file ${HTMLLICENSES})
 endforeach()
 file(APPEND ${LICENSES_QRC} "    </qresource>\n</RCC>")
 
+file(GLOB_RECURSE HTMLHELP ${HTMLDIR}/help/*)
+set(HELP_QRC ${HTMLDIR}/help.qrc)
+file(WRITE ${HELP_QRC} "<RCC>\n    <qresource prefix=\"/\">\n")
+foreach(my_file ${HTMLHELP})
+    file(RELATIVE_PATH my_file_relative_path ${HTMLDIR} ${my_file})
+    file(APPEND ${HELP_QRC} "        <file>${my_file_relative_path}</file>\n")
+endforeach()
+file(APPEND ${HELP_QRC} "    </qresource>\n</RCC>")
 
 # all dependencies search now moved to FindNeutrinoGuiComponents.cmake
 # (see neutrino cmake resources folder)
@@ -140,11 +148,13 @@ if (USE_QT5)
     qt5_add_resources(RES_SOURCES ${ICONS_QRC})
     qt5_add_resources(RES_SOURCES ${HTML_QRC})
     qt5_add_resources(RES_SOURCES ${LICENSES_QRC})
+    qt5_add_resources(RES_SOURCES ${HELP_QRC})
     QT5_WRAP_UI( UI_HEADERS ${UIS} )
 elseif (USE_QT4)
     qt4_add_resources(RES_SOURCES ${ICONS_QRC})
     qt4_add_resources(RES_SOURCES ${HTML_QRC})
     qt4_add_resources(RES_SOURCES ${LICENSES_QRC})
+    qt4_add_resources(RES_SOURCES ${HELP_QRC})
     QT4_WRAP_UI( UI_HEADERS ${UIS} )
 endif()
 
