--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,40 +102,46 @@ endif()
 # write automatically the qrc file for icons
 set(ICONSDIR ${CMAKE_CURRENT_SOURCE_DIR}/../resources/icons)
 file(GLOB_RECURSE ICONS ${ICONSDIR}/*.png)
-set(ICONS_QRC ${ICONSDIR}/icons.qrc)
+set(ICONS_QRC ${PROJECT_BINARY_DIR}/src/icons.qrc)
 file(WRITE ${ICONS_QRC} "<RCC>\n    <qresource prefix=\"/icons/\">\n")
 foreach(my_file ${ICONS})
-    file(RELATIVE_PATH my_file_relative_path ${ICONSDIR} ${my_file})
-    file(APPEND ${ICONS_QRC} "        <file>${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${PROJECT_BINARY_DIR}/src ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    file(APPEND ${ICONS_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${ICONS_QRC} "    </qresource>\n</RCC>")
 
 # write automatically the qrc file for html
 set(HTMLDIR ${CMAKE_CURRENT_SOURCE_DIR}/../resources/html)
 file(GLOB HTMLS ${HTMLDIR}/*.html)
-set(HTML_QRC ${HTMLDIR}/html.qrc)
+set(HTML_QRC ${PROJECT_BINARY_DIR}/src/html.qrc)
 file(WRITE ${HTML_QRC} "<RCC>\n    <qresource prefix=\"/html/\">\n")
 foreach(my_file ${HTMLS})
-    file(RELATIVE_PATH my_file_relative_path ${HTMLDIR} ${my_file})
-    file(APPEND ${HTML_QRC} "        <file>${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${PROJECT_BINARY_DIR}/src ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    file(APPEND ${HTML_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${HTML_QRC} "    </qresource>\n</RCC>")
 
 file(GLOB_RECURSE HTMLLICENSES ${HTMLDIR}/licenses/*)
-set(LICENSES_QRC ${HTMLDIR}/licenses.qrc)
+set(LICENSES_QRC ${PROJECT_BINARY_DIR}/src/licenses.qrc)
 file(WRITE ${LICENSES_QRC} "<RCC>\n    <qresource prefix=\"/licenses/\">\n")
 foreach(my_file ${HTMLLICENSES})
-    file(RELATIVE_PATH my_file_relative_path ${HTMLDIR} ${my_file})
-    file(APPEND ${LICENSES_QRC} "        <file>${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${PROJECT_BINARY_DIR}/src ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    file(APPEND ${LICENSES_QRC} "        <file alias=\"${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${LICENSES_QRC} "    </qresource>\n</RCC>")
 
 file(GLOB_RECURSE HTMLHELP ${HTMLDIR}/help/*)
-set(HELP_QRC ${HTMLDIR}/help.qrc)
-file(WRITE ${HELP_QRC} "<RCC>\n    <qresource prefix=\"/\">\n")
+set(HELP_QRC ${PROJECT_BINARY_DIR}/src/help.qrc)
+file(WRITE ${HELP_QRC} "<RCC>\n    <qresource prefix=\"/help/\">\n")
 foreach(my_file ${HTMLHELP})
-    file(RELATIVE_PATH my_file_relative_path ${HTMLDIR} ${my_file})
-    file(APPEND ${HELP_QRC} "        <file>${my_file_relative_path}</file>\n")
+    file(RELATIVE_PATH my_file_relative_path ${PROJECT_BINARY_DIR}/src ${my_file})
+    GET_FILENAME_COMPONENT(my_file_basename ${my_file} NAME)
+    GET_FILENAME_COMPONENT(my_file_dir ${my_file} DIRECTORY)
+    GET_FILENAME_COMPONENT(my_file_dir_clean ${my_file_dir} NAME)
+    file(APPEND ${HELP_QRC} "        <file alias=\"${my_file_dir_clean}/${my_file_basename}\">${my_file_relative_path}</file>\n")
 endforeach()
 file(APPEND ${HELP_QRC} "    </qresource>\n</RCC>")
 
