--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,22 @@
 os: linux
 
+sudo: required
+
+dist: trusty
+
+
+addons:
+  apt:
+    sources:
+    # add PPAs with more up-to-date toolchains
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.6
+    packages:
+    # install toolchains
+    - gcc-5
+    - g++-5
+    - clang-3.6
+    
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libhdf5-dev libcfitsio-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl-dev libhdf4-dev build-essential
