--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,15 @@ sudo: required
 
 dist: trusty
 
-
+compiler: gcc
 addons:
   apt:
     sources:
-    # add PPAs with more up-to-date toolchains
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
     packages:
-    # install toolchains
-    - gcc-5
-    - g++-5
-    - clang-3.6
-    
+      - g++-5
+env: COMPILER=g++-5
+          
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libhdf5-dev libcfitsio-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl-dev libhdf4-dev build-essential
@@ -24,4 +20,4 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake .. && make
+  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
