--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env: COMPILER=g++-5
           
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y libhdf5-dev libcfitsio-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl-dev libhdf4-dev build-essential
+  - sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
 
 script:
   - mkdir build
