--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ before_install:
   - sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
 
 script:
-  - git checkout master
+  - git checkout -b travis
+  - git commit -a -m "travis build"
   - mkdir build
   - cd build
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
