--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,11 @@ before_install:
   - cat .travis.yml
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
+  - apt-cache search pythonqt
+  - apt-cache search qt5
   - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
   - sudo apt-get install qt5-default qttools5-dev-tools
   - sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
-  - apt-cache search pythonqt
 
 script:
   - git checkout -b travis
