--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,10 @@ before_install:
   - sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
   - sudo updatedb
   - locate qmake
+  - locate Qt5Config.cmake
+  - locate .cmake
   - qmake --version
+  
 
 script:
   - git checkout -b travis
