--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,6 @@ script:
   - git tag -a v1.0 -m "travis 1.0"
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - cmake DQt5_DIR=/usr/lib/x86_64-linux-gnu/cmake/Qt5 -DCMAKE_CXX_COMPILER=$COMPILER .. && make
 
 install:
