--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - cat .travis.yml
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
+  - aptitude search qt5
   - sudo apt-get install -y qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
   - sudo apt-get install -y qt5-default qttools5-dev-tools
   - sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
@@ -30,6 +31,7 @@ before_install:
   - locate Qt5Config.cmake
   - locate .cmake
   - qmake --version
+  - /usr/lib/x86_64-linux-gnu/qt5/bin/qmake --version
   
 
 script:
