--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,9 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get remove -y '^qt4.*'
   - apt-cache search qt5
-  - sudo apt-get install -y qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
-  - sudo apt-get install -y qt5-default qttools5-dev-tools
+  - sudo apt-get install -y qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev libqt5quick5
+  - sudo apt-get install -y qt5-default qttools5-dev-tools 
+  - sudo apt-get install -y libqt5gui5 libqt5multimedia5 libqt5multimediawidgets5 libqt5script5 libqt5scripttools5 libqt5svg5 libqt5svg5-dev libqt5gui5 
   - sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
   - apt-cache search qt5
   - sudo updatedb
@@ -41,6 +42,6 @@ script:
   - git tag -a v1.0 -m "travis 1.0"
   - mkdir build
   - cd build
-  - cmake -DQt5_DIR=/usr/lib/x86_64-linux-gnu/qt5 .. && make
+  - cmake -DCMAKE_PREFIX=/usr/lib/x86_64-linux-gnu/cmake/Qt5 -DQt5_DIR=/usr/lib/x86_64-linux-gnu/qt5 .. && make
 
 install:
