--- a/.travis.yml
+++ b/.travis.yml
@@ -12,26 +12,19 @@ env:
 #  - CONFIG=Debug
 
 install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         wget http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz
-      && tar -xzf cmake-3.2.3-Linux-i386.tar.gz
-      && sudo cp -fR cmake-3.2.3-Linux-i386/* /usr
-      && sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
-      && sudo apt-add-repository -y ppa:beineri/opt-qt541
-      && sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
-      && sudo apt-get -qq update
-      && sudo apt-get -qq install g++-4.8 libc6-i386 qt54tools qt54svg qt54webkit
-      && export CXX="g++-4.8"
-      && export CC="gcc-4.8"
-      ;
-    else
-         brew update
-      && brew unlink cmake
-      && brew install cmake
-      && brew install qt5
-      && chmod -R 755 /usr/local/opt/qt5/*
-      ;
-    fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then wget http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tar -xzf cmake-3.2.3-Linux-i386.tar.gz; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo cp -fR cmake-3.2.3-Linux-i386/* /usr; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:beineri/opt-qt541; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq install g++-4.8 libc6-i386 qt54tools qt54svg qt54webkit; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew unlink cmake; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install cmake; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install qt5; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then chmod -R 755 /usr/local/opt/qt5/*; fi
 
 script:
   -    mkdir -p build
