--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
   - CONFIG=Release
 #  - CONFIG=Debug
 
-install:
+before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then wget http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tar -xzf cmake-3.2.3-Linux-i386.tar.gz; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo cp -fR cmake-3.2.3-Linux-i386/* /usr; fi
