--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
 #  - CONFIG=Debug
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then wget http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then wget --no-check-certificate http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tar -xzf cmake-3.2.3-Linux-i386.tar.gz; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo cp -fR cmake-3.2.3-Linux-i386/* /usr; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test; fi
