--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,10 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tar -xzf cmake-3.2.3-Linux-i386.tar.gz; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo cp -fR cmake-3.2.3-Linux-i386/* /usr; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:beineri/opt-qt541; fi
-  - apt-cache search libtiff
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y libcfitsio3-dev libhdf5-serial-dev  libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:beineri/opt-qt57; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq update; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq install g++-4.8 libc6-i386 qt54tools qt54svg qt54webkit; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y libcfitsio3-dev libhdf5-serial-dev libtiff4-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq install g++-4.8 libc6-i386 qt57tools qt57svg qt57webkit; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew unlink cmake; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install cmake; fi
