--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,25 @@
+sudo: required
+dist: trusty
 language: cpp
+cache: apt
 
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
 
-env:
-  - CONFIG=Release
-#  - CONFIG=Debug
-
-before_install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then wget --no-check-certificate http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tar -xzf cmake-3.2.3-Linux-i386.tar.gz; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo cp -fR cmake-3.2.3-Linux-i386/* /usr; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-add-repository -y ppa:beineri/opt-qt57; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq update; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y libcfitsio3-dev libhdf5-serial-dev libtiff4-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get -qq install g++-4.8 libc6-i386 qt57tools qt57svg qt57webkit; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew unlink cmake; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install cmake; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install qt5; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then chmod -R 755 /usr/local/opt/qt5/*; fi
+befo
+  - wget --no-check-certificate http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz
+  - tar -xzf cmake-3.2.3-Linux-i386.tar.gz
+  - sudo cp -fR cmake-3.2.3-Linux-i386/* /usr
+  - sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-add-repository -y ppa:beineri/opt-qt57-trusty
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libcfitsio3-dev libhdf5-serial-dev libtiff4-dev libfftw3-dev libfftw3-3 cmake g++ libgsl0-dev gsl-bin libhdf4-dev build-essential
+  - sudo apt-get -qq install g++-4.8 libc6-i386 qt57tools qt57svg qt57webkit
+  - find /usr/local/opt/qt* -type d
 
 script:
-  -    mkdir -p build
-    && cd build
-    && if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-          cmake -DCMAKE_BUILD_TYPE=$CONFIG -DCMAKE_PREFIX_PATH=/opt/qt54/lib/cmake  ..
-         ;
-       else
-         cmake -DCMAKE_BUILD_TYPE=$CONFIG -DCMAKE_PREFIX_PATH=/usr/local/opt/qt5/lib/cmake ..
-         ;
-       fi
-    && make -j 3
+  - mkdir -p build
+  - cd build
+  - cmake -DCMAKE_PREFIX_PATH=/opt/qt57/lib/cmake  ..
+  - make
 
           
 install:
