--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: cpp
 cache: apt
 
 
-befo
+before_install:
   - wget --no-check-certificate http://www.cmake.org/files/v3.2/cmake-3.2.3-Linux-i386.tar.gz
   - tar -xzf cmake-3.2.3-Linux-i386.tar.gz
   - sudo cp -fR cmake-3.2.3-Linux-i386/* /usr
@@ -20,6 +20,5 @@ script:
   - cd build
   - cmake -DCMAKE_PREFIX_PATH=/opt/qt57/lib/cmake  ..
   - make
-
           
 install:
