--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,22 @@
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-    - os: osx
-      osx_image: xcode7.2           
-
 language: cpp
 
-compiler: gcc
+os:
+  - linux
+  - osx
+
+sudo: required
+dist: trusty
+osx_image: xcode7.2
+
           
 before_install:
   - git fetch -t
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
   # neutrino
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew tap homebrew/science;fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && then brew upgrade && brew tap homebrew/science;fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew info fftw; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install fftw --with-openmp; fi
 
 script:
