--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ osx_image: xcode7.2
           
 before_install:
   - git fetch -t
+  - git clone git@github.com:commontk/PythonQt.git
+  - cd PythonQt
+  - mkdir -p compile && cd compile
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 .. && make && make install; fi
+  - cd ../..
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
   # neutrino
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
