--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ osx_image: xcode7.2
           
 before_install:
   - git fetch -t
-  - git clone git@github.com:commontk/PythonQt.git
+  - git clone https://github.com/commontk/PythonQt.git
   - cd PythonQt
   - mkdir -p compile && cd compile
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 .. && make && make install; fi
