--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: cpp
 
+git:
+  depth: 9999999
+
 os:
   - linux
   - osx
@@ -12,6 +15,7 @@ osx_image: xcode7.2
 before_install:
   - git fetch -t
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-cache search 'qt.*5'; fi
   # neutrino
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew upgrade && brew tap homebrew/science; fi
@@ -19,6 +23,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew info fftw; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install fftw --with-openmp; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew list; fi
+  # pythonqt
   - git clone https://github.com/commontk/PythonQt.git
   - cd PythonQt
   - mkdir -p compile && cd compile
@@ -28,6 +33,6 @@ before_install:
 script:
   - git checkout -b travis
   - git tag -a v1.0 -m "travis 1.0"
-  - make
+  - make || cat */CMakeCache.txt
 
 install:
