--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ language: cpp
 git:
   depth: 9999999
 
-os:
-  - linux
-  - osx
+os: osx
 
 sudo: required
 dist: trusty
@@ -19,7 +17,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y qt5-default qtbase5-dev libqt5svg5 libqt5svg5-dev qtmultimedia5-dev qttools5-dev libqt5multimediawidgets5 libqt5clucene5 libqt5designer5 libqt5designercomponents5 libqt5help5 libqt5printsupport5; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew tap homebrew/science; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc qt55 cfitsio cmake hdf4 hdf5 gsl; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install fftw --with-openmp; fi
   # pythonqt
   - git clone https://github.com/iltommi/PythonQt.git
@@ -27,7 +25,7 @@ before_install:
   - cd PythonQt
   - mkdir -p compile && cd compile
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake -DQt5_DIR=/usr/lib/x86_64-linux-gnu -DPythonQt_Wrap_QtAll=TRUE .. && make && make install; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -DPythonQt_Wrap_QtAll=TRUE .. && make && make install; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export QTDIR=/usr/local/opt/qt55/lib; cmake -DQt5_DIR=${QTDIR}/lib/cmake/Qt5 -DPythonQt_Wrap_QtAll=TRUE .. && make && make install; fi
   - cd ../..
 
 script:
