--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 language: cpp
 
+git:
+  depth: 9999999
+
 os: osx
 
 sudo: required
 dist: trusty
 osx_image: xcode7.2
 
-          
+            
 before_install:
+  - git fetch -t
   - git checkout $TRAVIS_BRANCH
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y qt5-default qtbase5-dev libqt5svg5 libqt5svg5-dev qtmultimedia5-dev qttools5-dev libqt5multimediawidgets5 libqt5clucene5 libqt5designer5 libqt5designercomponents5 libqt5help5 libqt5printsupport5; fi
@@ -28,8 +32,3 @@ script:
 
 install:
 
-deploy:
-  provider: releases
-  api_key: $github_token
-  file: Neutrino.dmg
-  skip_cleanup: true
