--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: cpp
 
 os: osx
 
+git:
+  depth: 9999999
+
 sudo: required
 dist: trusty
 osx_image: xcode7.2
@@ -29,7 +32,8 @@ script:
 install:
 
 before_deploy:
-  - export RELEASE_FILE=$(ls Neutrino*.dmg)
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export RELEASE_FILE=$(ls Neutrino*.dmg); fi
+  - if [[ "$TRAVIS_OS_NAME" == "Linux" ]]; then export RELEASE_FILE=$(ls Neutrino*.deb); fi
   - echo "deploying $RELEASE_FILE to GitHub releases"
   
 deploy:
