--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ osx_image: xcode7.2
 
 before_install:
   - git fetch -t
+  - git checkout $TRAVIS_BRANCH
   - git tag -a travis -m "Travis CI https://travis-ci.org/iltommi/neutrino"
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y qt5-default qtbase5-dev libqt5svg5 libqt5svg5-dev qtmultimedia5-dev qttools5-dev libqt5multimediawidgets5 libqt5clucene5 libqt5designer5 libqt5designercomponents5 libqt5help5 libqt5printsupport5; fi
