--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,12 @@ branches:
 before_install:
   - git fetch -t
   - git checkout $TRAVIS_BRANCH
-  - git symbolic-ref HEAD
+  - git symbolic-ref $TRAVIS_BRANCH
   - git describe --abbrev=0 --tags
-  - git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count
-  - git rev-parse --short HEAD
-#  - git tag -a $(git describe --abbrev=0 --tags).$(git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count) -m "Travis CI https://travis-ci.org/iltommi/neutrino"
-#  - git tag
-#  - git push --tags
+  - git rev-list master $(git describe --abbrev=0 --tags)^..$TRAVIS_BRANCH --count
+  - git rev-parse --short $TRAVIS_BRANCH
+  - git tag -a $(git describe --abbrev=0 --tags).$(git rev-list master $(git describe --abbrev=0 --tags)^..$TRAVIS_BRANCH --count) -m "Travis CI https://travis-ci.org/iltommi/neutrino"
+  - git tag
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y qt5-default qtbase5-dev libqt5svg5 libqt5svg5-dev qtmultimedia5-dev qttools5-dev libqt5multimediawidgets5 libqt5clucene5 libqt5designer5 libqt5designercomponents5 libqt5help5 libqt5printsupport5; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
@@ -52,3 +51,5 @@ deploy:
   file: "${RELEASE_FILE}"
   skip_cleanup: true
   overwrite: true
+  on:
+    tags: true
