--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,15 @@ branches:
 before_install:
   - git fetch -t
   - git checkout $TRAVIS_BRANCH
+
+  - git config --global user.email "builds@travis-ci.com"
+  - git config --global user.name "Travis CI"
+  - git fetch -t
+  - git checkout $TRAVIS_BRANCH
+  - export GIT_TAG=$(git describe --abbrev=0 --tags).$(git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count)
+  - git tag -a $GIT_TAG -m "Travis CI https://travis-ci.org/iltommi/neutrino"
+  - git push --quiet https://${github_token}@github.com/iltommi/neutrino $GIT_TAG
+  
   - git symbolic-ref HEAD
   - git describe --abbrev=0 --tags
   - git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count
