--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -131,6 +131,14 @@ else()
 	install (TARGETS nPhysImageF COMPONENT binary DESTINATION lib)
 endif()
 
+if (LINUX)
+	if (OPTION_INSTALL_PYTHONQT STREQUAL "ON" AND NOT PYTHONQT STREQUAL "PYTHONQT-NOTFOUND")
+		message (STATUS "PythonQt lib is copied along")
+		install (FILES ${PYTHONQT} DESTINATION lib)
+		list(APPEND CPACK_DEBIAN_PACKAGE_CONFLICTS "libpythonqt")
+	endif()
+endif()
+
 if (APPLE)
 set (LIB_INSTALL_DIR "/usr/local/lib")
 set (CMAKE_INSTALL_RPATH "/usr/local/lib")
